// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vite all: all 1`] = `

export const envVar = import.meta.env.VITE_VAR

export const modules = import.meta.glob('files/*.ts')

export const eagerModules = import.meta.globEager('files/*.ts')

export const hot = import.meta.hot

      ↓ ↓ ↓ ↓ ↓ ↓

export const envVar = process.env.VITE_VAR
export const modules = {
  './files/file1.ts': () => import('./files/file1.ts')
}
export const eagerModules = {
  './files/file1.ts': require('./files/file1.ts')
}
export const hot = module.hot


`;

exports[`vite defaults: defaults 1`] = `

export const envVar = import.meta.env.VITE_VAR

export const modules = import.meta.glob('files/*.ts')

export const eagerModules = import.meta.globEager('files/*.ts')

export const hot = import.meta.hot

      ↓ ↓ ↓ ↓ ↓ ↓

export const envVar = process.env.VITE_VAR
export const modules = {
  './files/file1.ts': () => import('./files/file1.ts')
}
export const eagerModules = {
  './files/file1.ts': require('./files/file1.ts')
}
export const hot = module.hot


`;

exports[`vite env-only: env-only 1`] = `

export const envVar = import.meta.env.VITE_VAR

export const modules = import.meta.glob('files/*.ts')

export const eagerModules = import.meta.globEager('files/*.ts')

export const hot = import.meta.hot

      ↓ ↓ ↓ ↓ ↓ ↓

export const envVar = process.env.VITE_VAR
export const modules = import.meta.glob('files/*.ts')
export const eagerModules = import.meta.globEager('files/*.ts')
export const hot = import.meta.hot


`;

exports[`vite glob-only: glob-only 1`] = `

export const envVar = import.meta.env.VITE_VAR

export const modules = import.meta.glob('files/*.ts')

export const eagerModules = import.meta.globEager('files/*.ts')

export const hot = import.meta.hot

      ↓ ↓ ↓ ↓ ↓ ↓

export const envVar = import.meta.env.VITE_VAR
export const modules = {
  './files/file1.ts': () => import('./files/file1.ts')
}
export const eagerModules = {
  './files/file1.ts': require('./files/file1.ts')
}
export const hot = import.meta.hot


`;

exports[`vite hot-only: hot-only 1`] = `

export const envVar = import.meta.env.VITE_VAR

export const modules = import.meta.glob('files/*.ts')

export const eagerModules = import.meta.globEager('files/*.ts')

export const hot = import.meta.hot

      ↓ ↓ ↓ ↓ ↓ ↓

export const envVar = import.meta.env.VITE_VAR
export const modules = import.meta.glob('files/*.ts')
export const eagerModules = import.meta.globEager('files/*.ts')
export const hot = module.hot


`;
